  - Fixed a bug related to pets not being teleported along with you.
  - Moved the definition export to a separate file and made it more than 10 times faster.
  - Added wolfpack.exportdefinitions() to the python api.
  - Added export definitions to the file menu of the windows gui.
  - Fixed another major memory leak in definitions reloading.
 * Definition Changes:
  - Bench (0x1049) which was crafted was "unusable"
  - fixed bug #0000381 ("potion_keg" and "potionkeg")
  - Set the minimum restock amount of reagents, arrows and bolts to 50.
  - Fixed the name of sheep.
  - Fixed bug #0000386 (missing tongs sellprice tag)
  - Fixed light radius for certain lightsources.
  - Removed carve tags (and related files) which are no longer used.
  - Support for client 4.0.8.
  - Added Samurai Empire craftables to the tailoring menu.
  - Added watersource tags (bug #0000399)
 * Python Script Changes:
  - Added a follow command.
  - Tinkers can now choose a second material.
  - Swingspeed is now limited to 1 swing per second.
  - Implemented several item property caps.
  - Archers now only need to stand still for 500 ms before they can fire.
  - Parried special abilities don't consume mana anymore.
  - Using a special ability 3 seconds after the last special ability consumes twice
    the mana.
  - Fixed an issue with the spell Telekinesis
  - Fix for Detecting Hidden
  - Fixed bug #0000380 (potionkeg was not usable with nightsight potion)
  - Fixed an issue with nuke <baseid> not working if the baseid had two characters.
  - Improved goname command (you can not only go the first char; e.g. use the command twice to go to
    the second char with the same name etc.)
  - Added a goitem <name> command (same function as goname, but for items)
  - Fixed a bug in the nukez command.
  - Fixed an issue with skillgain in the low levels.
  - Its no longer possible to equip movable>=2 items with doubleclicks.
  - Added the tilepattern command.